Extracted DTOs to separate module

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,41 @@
   <packaging>pom</packaging>
   <description>Simple search engine</description>
 
-  <modules>
-    <module>server</module>
+  <properties>
+    <java.version>11</java.version>
+    <lombok.version>1.18.18</lombok.version>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+  </properties>
 
+  <modules>
+    <module>search-api</module>
+    <module>client</module>
+    <module>server</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler-plugin.version}</version>
+          <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
