--- a/server/pom.xml
+++ b/server/pom.xml
@@ -13,28 +13,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>server</name>
   <description>Rest server for search engine</description>
+
   <properties>
     <java.version>11</java.version>
     <apache.commons.version>3.12.0</apache.commons.version>
-    <lombok.version>1.18.18</lombok.version>
-    <!-- TODO move to client lib-->
-    <retrofit.version>2.9.0</retrofit.version>
   </properties>
 
   <dependencies>
-
-    <!-- TODO move to client lib -->
-    <!--    <dependency> -->
-    <!--      <groupId>com.squareup.retrofit2</groupId>-->
-    <!--      <artifactId>converter-jackson</artifactId>-->
-    <!--      <version>${retrofit.version}</version>-->
-    <!--    </dependency>-->
-    <!--    <dependency>-->
-    <!--      <groupId>com.squareup.retrofit2</groupId>-->
-    <!--      <artifactId>retrofit</artifactId>-->
-    <!--      <version>${retrofit.version}</version>-->
-    <!--    </dependency>-->
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -43,6 +28,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
+    <dependency>
+      <artifactId>search-api</artifactId>
+      <groupId>org.example</groupId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -64,15 +55,18 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId></groupId>
-      <artifactId></artifactId>
-    </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
