--- a/search-api/pom.xml
+++ b/search-api/pom.xml
@@ -7,8 +7,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.example</groupId>
-    <artifactId>search-engine</artifactId>
+    <groupId>com.example.search</groupId>
+    <artifactId>search-app</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
