--- a/client/pom.xml
+++ b/client/pom.xml
@@ -44,6 +44,7 @@
         <version>3.0.0</version>
         <configuration>
           <mainClass>com.example.search.client.HardcodedClientApplication</mainClass>
+          <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
       </plugin>
     </plugins>
